Fixes missing table columns spacing after bootstrap update.

--- a/src/XMLManager/ComputerStore/Content/Site.css
+++ b/src/XMLManager/ComputerStore/Content/Site.css
@@ -18,6 +18,11 @@ textarea {
     max-width: 280px;
 }
 
+table {
+    border-spacing: 30px 10px;
+    border-collapse: separate;
+}
+
 
 /* Responsive: Portrait tablets and up */
 @media screen and (min-width: 768px) {
